--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                         <!-- PLAYER NAME --->
                         <div class="player-name pt-3 align-self-end" id="player-1">Player 1</div>
                         <!-- GLOBAL SCORE PLAYER --->
-                        <div class="player-score align-self-start" id="score-0">0</div>
+                        <div class="player-score align-self-start" id="scoreGlobal-1">0</div>
                     </div>
                     <div class="row h-50">
                         <div class="current-player w-50">
                             <!-- ROUND SCORE PLAYER --->
                             <div class="player-current-label text-align p-2">Current</div>
-                            <div class="player-current-score text-white pb-2" id="current-0">0</div>
+                            <div class="player-current-score text-white pb-2" id="current-1">0</div>
                         </div>
                     </div>
                 </div>
@@ -79,13 +79,13 @@
                         <!-- PLAYER NAME --->
                         <div class="player-name pt-3 align-self-end" id="player-2">Player 2</div>
                         <!-- GLOBAL SCORE PLAYER --->
-                        <div class="player-score align-self-start" id="score-1">0</div>
+                        <div class="player-score align-self-start" id="scoreGlobal-2">0</div>
                     </div>
                     <div class="row h-50">
                         <div class="current-player w-50">
                              <!-- ROUND SCORE PLAYER --->
                             <div class="player-current-label p-2">Current</div>
-                            <div class="player-current-score text-white pb-2" id="current-1">0</div>
+                            <div class="player-current-score text-white pb-2" id="current-2">0</div>
                         </div>
                     </div>
                 </div>
