--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="canvas" class="container bg-light shadow text-center position-relative">
             <div class="row text-uppercase" id="panel">
                <!-- Player 1 -->
-                <div class="col-md player-0-panel active">
+                <div class="col-md player-1-panel active">
                     <div class="row h-50">
                         <!-- PLAYER NAME --->
                         <div class="player-name pt-3 align-self-end" id="player-1">Player 1</div>
@@ -74,7 +74,7 @@
                 <!-- End of player 1 -->
 
                 <!-- Player 2 -->
-                <div class="col-md player-1-panel">
+                <div class="col-md player-2-panel">
                     <div class="row h-50">
                         <!-- PLAYER NAME --->
                         <div class="player-name pt-3 align-self-end" id="player-2">Player 2</div>
@@ -108,10 +108,7 @@
 
                 <!-- DICES ---> 
                 <div id="dice">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-dice-1 text-danger" viewBox="0 0 16 16">
-                        <circle cx="8" cy="8" r="1.5"/>
-                        <path d="M13 1a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h10zM3 0a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V3a3 3 0 0 0-3-3H3z"/>
-                    </svg>
+                    <img src="img/dices-faces/dice-1.svg" alt="dice-1">
                 </div>
                 <!-- END OF DICES ---> 
 
@@ -119,7 +116,7 @@
                 <div class="buttons-game">
                     <!-- BUTTON ROLL -->
                     <div>
-                        <button class="btn p-3">
+                        <button class="btn p-3" id="rollTheDice" type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-clockwise text-danger me-2" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
                                 <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
