add animate of dices

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <!-- END OF NEW GAME BUTTON ---> 
 
                 <!-- DICES ---> 
-                <div id="dice">
-                    <img src="img/dices-faces/dice-1.svg" alt="dice-1">
+                <div>
+                    <img src="img/dices-faces/dice-1.svg" alt="dice-1" id="dice">
                 </div>
                 <!-- END OF DICES ---> 
 
