--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         <div class="player-score align-self-start" id="scoreGlobal-1">0</div>
                     </div>
                     <div class="row h-50">
-                        <div class="current-player w-50">
+                        <div class="current-player">
                             <!-- ROUND SCORE PLAYER --->
-                            <div class="player-current-label text-align p-2">Current</div>
+                            <div class="player-current-label pt-2">Current</div>
                             <div class="player-current-score text-white pb-2" id="current-1">0</div>
                         </div>
                     </div>
@@ -82,9 +82,9 @@
                         <div class="player-score align-self-start" id="scoreGlobal-2">0</div>
                     </div>
                     <div class="row h-50">
-                        <div class="current-player w-50">
+                        <div class="current-player">
                              <!-- ROUND SCORE PLAYER --->
-                            <div class="player-current-label p-2">Current</div>
+                            <div class="player-current-label pt-2">Current</div>
                             <div class="player-current-score text-white pb-2" id="current-2">0</div>
                         </div>
                     </div>
@@ -93,10 +93,10 @@
             </div>
 
             <!--Buttons-->
-            <div class="" id="buttons-box">
+            <div id="buttons-box" class="d-flex flex-column justify-content-between">
                   <!-- NEW GAME BUTTON ---> 
-                <div id="button-new-game">
-                    <button class="btn  p-2" data-bs-toggle="modal" data-bs-target="#modal-new-game">
+                <div id="button-new-game" class="pt-2">
+                    <button class="btn mb-4" data-bs-toggle="modal" data-bs-target="#modal-new-game">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-circle text-danger me-2" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -113,10 +113,10 @@
                 <!-- END OF DICES ---> 
 
                 <!-- BUTTONS GROUP ROLL AND HOLD-->
-                <div class="buttons-game">
+                <div class="buttons-game pb-2">
                     <!-- BUTTON ROLL -->
                     <div>
-                        <button class="btn p-3" id="rollTheDice" type="button">
+                        <button class="btn" id="rollTheDice" type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-clockwise text-danger me-2" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
                                 <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
@@ -127,7 +127,7 @@
                     <!-- END OF BUTTON ROLL -->
                     <!-- BUTTON HOLD -->
                     <div>
-                        <button class="btn p-3">
+                        <button class="btn">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-arrow-in-down text-danger me-2" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"/>
                                 <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
