--- a/index.html
+++ b/index.html
@@ -56,36 +56,36 @@
         <div id="canvas" class="container bg-light shadow text-center position-relative">
             <div class="row text-uppercase" id="panel">
                <!-- Player 1 -->
-                <div class="col-md player-1-panel active">
+                <div class="col-md player-0-panel active">
                     <div class="row h-50">
                         <!-- PLAYER NAME --->
-                        <div class="player-name pt-3 align-self-end" id="player-1">Player 1</div>
+                        <div class="player-name pt-3 align-self-end" id="player-0">Player 1</div>
                         <!-- GLOBAL SCORE PLAYER --->
-                        <div class="player-score align-self-start" id="scoreGlobal-1">0</div>
+                        <div class="player-score align-self-start" id="scoreGlobal-0">0</div>
                     </div>
                     <div class="row h-50">
                         <div class="current-player">
                             <!-- ROUND SCORE PLAYER --->
-                            <div class="player-current-label pt-2">Current</div>
-                            <div class="player-current-score text-white pb-2" id="current-1">0</div>
+                            <div class="player-current-label pt-2 text-wrap">Current</div>
+                            <div class="player-current-score text-white pb-2" id="current-0">0</div>
                         </div>
                     </div>
                 </div>
                 <!-- End of player 1 -->
 
                 <!-- Player 2 -->
-                <div class="col-md player-2-panel">
+                <div class="col-md player-1-panel">
                     <div class="row h-50">
                         <!-- PLAYER NAME --->
-                        <div class="player-name pt-3 align-self-end" id="player-2">Player 2</div>
+                        <div class="player-name pt-3 align-self-end" id="player-1">Player 2</div>
                         <!-- GLOBAL SCORE PLAYER --->
-                        <div class="player-score align-self-start" id="scoreGlobal-2">0</div>
+                        <div class="player-score align-self-start" id="scoreGlobal-1">0</div>
                     </div>
                     <div class="row h-50">
                         <div class="current-player">
                              <!-- ROUND SCORE PLAYER --->
-                            <div class="player-current-label pt-2">Current</div>
-                            <div class="player-current-score text-white pb-2" id="current-2">0</div>
+                            <div class="player-current-label pt-2 text-wrap">Current</div>
+                            <div class="player-current-score text-white pb-2" id="current-1">0</div>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <!-- END OF BUTTON ROLL -->
                     <!-- BUTTON HOLD -->
                     <div>
-                        <button class="btn">
+                        <button class="btn" id="hold">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-arrow-in-down text-danger me-2" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"/>
                                 <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
@@ -163,6 +163,23 @@
                   </div>
                 </div>
             </div>
+            <!-- END MODAL-->
+            <!-- MODAL WINNER-->
+            <div class="modal fade" tabindex="-1" id="winner">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content modal-win">
+                    <div class="modal-header">
+                      <h5 class="modal-title fw-bold text-danger text-uppercase">Well done</h5>
+                    </div>
+                    <div class="modal-body fs-1 pt-3 text-danger fw-bold text-uppercase">
+                      <p>The player has won the game</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </div>
         <!-- END OF PLAYER ZONE-->
     </div>
