add file js with class

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                       <h5 class="modal-title fw-bold text-danger text-uppercase">Well done</h5>
                     </div>
                     <div class="modal-body fs-1 pt-3 text-danger fw-bold text-uppercase">
-                      <p>The player has won the game</p>
+                      <p class="text-win"></p>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
