--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <!-- BUTTONS GROUP ROLL AND HOLD-->
             </div>
             <!--End of Buttons-->
-            <!-- MODAL -->
+            <!-- MODAL NEW GAME -->
             <div class="modal fade was-validated" id="modal-new-game" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -163,7 +163,7 @@
                   </div>
                 </div>
             </div>
-            <!-- END MODAL-->
+            <!-- END MODAL NEW GAME-->
             <!-- MODAL WINNER-->
             <div class="modal fade" tabindex="-1" id="winner">
                 <div class="modal-dialog modal-dialog-centered">
@@ -179,7 +179,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
+            </div>
+            <!-- END OF MODAL WINNER-->
         </div>
         <!-- END OF PLAYER ZONE-->
     </div>
